--- a/src/main/resources/templates/home/homeLayout.html
+++ b/src/main/resources/templates/home/homeLayout.html
@@ -17,14 +17,14 @@
 <script th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
 
 <!-- CSSの読込 -->
-<link th:href="@{/css/home.css}" rel="stylesheet"></link>
+<link th:href="@{/css/homeLayout.css}" rel="stylesheet"></link>
 
 <title>Home</title>
 </head>
 <body>
 	<!-- ===== ヘッダー（ナビゲーションバー） =====  -->
 	<nav class="navbar navbar-inverse navbar-fixed-top"
-		style="background-color: #007bbb;">
+		style="background-color: #007bbb;" >
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<div class="navbar-brand">寺務管理アプリケーション</div>
