--- a/src/main/resources/templates/worship/worshipSearchList.html
+++ b/src/main/resources/templates/worship/worshipSearchList.html
@@ -9,22 +9,27 @@
 <body>
 
 	<!-- コンテンツ部分 -->
-	<div th:fragment="worshipList_contents">
+	<div th:fragment="worshipSearchList_contents">
 		<div class="page-header">
 			<h1>お参り一覧</h1>
 		</div>
-  		<a href="/worshipSearchList">検索</a>
-  		<br>
+		<form action="/search" method="get" th:object="${worshipSearchList}">
+			<input type="search" name="supporterName" 
+			 placeholder="檀徒氏名を入力して下さい">  
+			 <!-- th:value="*{supporterName}" -->
+			<button type="submit">検索</button>			
+		</form>
+		<br>
 		<table class="table table-bordered table-hover table-striped">
 			<tr>
 				<th class="info col-sm-2" th:text="#{supporterName}">檀徒氏名</th>
 				<th class="info col-sm-2" th:text="#{worship}">お参り</th>
 				<th class="info col-sm-2" th:text="#{schedule}">日時</th>
 				<th class="info col-sm-2" th:text="#{remark}">備考</th>
-				<th class="info col-sm-2" th:text="#{done}">完了チェック</th>
-				
+				<th class="info col-sm-2" th:text="#{done}">完了チェック</th>	
 			</tr>
-			<tr th:each="worship : ${worshipList}" th:object="${worship}">
+			
+			<tr th:each="worship : ${worshipSearchList}" th:object="${worship}">
 				<td th:text="*{supporterName}"></td>
 				<td th:text="*{worshipOpts.label}"></td>
 				<td th:text="*{schedule}"></td>
