検索機能の追加

--- a/src/main/resources/templates/home/homeLayout.html
+++ b/src/main/resources/templates/home/homeLayout.html
@@ -44,7 +44,7 @@
 					</li>
 					<li role="presentation"><a th:href="@{'/supporterInsert'}">檀徒情報登録</a>
 					</li>
-					<li role="presentation"><a th:href="@{'/schedule'}">お参り一覧</a>
+					<li role="presentation"><a th:href="@{'/worshipSearchList'}">お参り一覧</a>
 					</li>
 				</ul>
 			</div>
