--- a/src/main/resources/templates/home/homeLayout.html
+++ b/src/main/resources/templates/home/homeLayout.html
@@ -22,6 +22,7 @@
 <title>Home</title>
 </head>
 <body>
+　　<!-- <a>circleCiデプロイ テスト</a> -->
 	<!-- ===== ヘッダー（ナビゲーションバー） =====  -->
 	<nav class="navbar navbar-inverse navbar-fixed-top"
 		style="background-color: #007bbb;" >
