檀徒詳細の更新機能の実装

--- a/src/main/resources/templates/supporter/supporterDetail.html
+++ b/src/main/resources/templates/supporter/supporterDetail.html
@@ -100,7 +100,9 @@
 						</td>
 					</tr>
 				</table>
-				<button class="btn btn-primary" type="submit">更新</button>         
+				<input type="hidden" name="supporterId" th:field="*{supporterId}">
+				<button class="btn btn-primary" type="submit" name="update">更新</button>
+				<!-- <button class="btn btn-danger" type="submit" name="delete">削除</button> -->         
 			</form>
 		</div>
 	</div>
