--- a/src/main/resources/templates/home/home.html
+++ b/src/main/resources/templates/home/home.html
@@ -10,7 +10,7 @@
 	<div th:fragment="home_contents">
 
 		<div class="page-header">
-			<h1>ホーム</h1>
+			<h1>ホーム画面</h1>
 		</div>
 		<h2 th:text="'ようこそ' + ${temple} + 'さん'"></h2>
 
